# lyos

./: .clang-format  .dir-locals.el  .gdbinit  .gitignore  .projectile  .travis.yml  BUGLIST  ChangeLog  Dockerfile  Jenkinsfile  Jenkinsfile-nightly  Makefile  README  README.md  README.org  SCREENSHOTS.md  a.img  activate-toolchain.sh  bochsrc  bochsrc.bxrc  bochsrc.gdb  config.in  debugfs.sh  kernel.bin.asm  krnl.map  lyos.img  setup-disk.sh  setup_toolchain.sh  write-kernel.sh
arch/arm/: Makefile  config.in
boot/: Makefile  loader.asm
command/: Makefile  bash  cat  cat.c  cmd.tar  cp  cp.c  date  date.c  echo  echo.c  hello.c  ls  ls.c  lyedit  lyedit.c  pwd  pwd.c  rm  rm.c  sh  sh.c  start.asm  su  su.c  touch  touch.c  uname  uname.c
drivers/: Makefile  config.in  driver.c
fs/: Makefile  const.h  device.c  exec.c  global.c  global.h  inode.c  link.c  main.c  misc.c  mount.c  namei.c  open.c  path.c  path.h  protect.c  proto.h  read_write.c  stat.c  super.c
include/: assert.h  ctype.h  errno.h  fcntl.h  features.h  libexec.h  multiboot.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  termios.h  time.h  type.h  unistd.h
init/: Makefile  init  main.c
kernel/: Makefile  clock.c  clockevent.c  clocksource.c  config.in  cpulocals.c  cpulocals.h  global.c  i8259.c  interrupt.c  klib.c  list.c  log.c  main.c  memory.c  proc.c  profile.c  protect.c  sched.c  smp.c  start.c  sys.c  sysinfo.c  systask.c  system.c  vmctl.c  watchdog.c
lib/: Makefile  config.in  data_copy.c  misc.c  spin.c  stat.c  uname.c  unlink.c  vir_copy.c
mm/: Makefile  alloc.c  brk.c  const.h  exec.c  fault.c  forkexit.c  global.c  global.h  main.c  memory.c  misc.c  mmap.c  mmproc.h  pagefault.c  pagetable.c  proto.h  region.c  region.h  service.c  signal.c  vmalloc.c
net/: Makefile  config.in
ramdisk/: Makefile
scripts/: activate-toolchain.sh  build-bash.sh  build-coreutils.sh  build-dash.sh  build-gcc-native.sh  build-gcc.sh  build-ncurses.sh  build-newlib.sh  create-dev.conf  create-ramdisk-dev.sh  debugfs.sh  fdisk-sd.conf  fdisk.conf  filedesc.dot  filedesc00.dot  filedesc01.dot  gen-riscv-image.sh  gencompile.sh  genlog  genversion.sh  kprof_analyzer.py  llsyslog  mount-disk.sh  prntdisk.tmp  setup-arm-sdimage.sh  setup-disk.sh  setup-toolchain.sh  uEnv.txt  umount-disk.sh  update-disk.sh  write-kernel.sh
servers/: Makefile  config.in
servman/: Makefile  exec.c  main.c  module.c  proto.h  service.c
tests/: Makefile
toolchain/: activate.sh  build-bash.py  build-coreutils.py  build-dash.py  build-ncurses.py  build-newlib.py  config.py  config.sh  download.sh  meson-aarch64.cross-file  meson-x86_64.cross-file  meson.cross-file  packages.list  setup-extra.sh  setup-x11.sh  setup.py  setup.sh  update-newlib.sh  utils.py  utils.sh
toolchain/patches/newlib/lyos/: Makefile.am  basename.c  clock_getres.c  clock_gettime.c  clock_settime.c  configure.in  crt0.S  crti.S  dirent.c  dirname.c  dl.c  epoll.c  err.c  eventfd.c  fcntl.c  flockfile.c  fnmatch.c  ftw.c  getcwd.c  getpass.c  getpwent.c  gettimeofday.c  grp.c  iconv.c  inet.c  inet_addr.c  inet_ntop.c  init.c  inotify.c  mntent.c  nanosleep.c  netdb.c  pathconf.c  poll.c  popen.c  prctl.c  progname.c  pty.c  random.c  realpath.c  (+18 more)
toolchain/patches/newlib/lyos/bits/: dirent.h  dlfcn.h  epoll.h  eventfd.h  fcntl-linux.h  inotify.h  posix_opt.h  pthread_types.h  pthreadtypes.h  signalfd.h  sockaddr.h  socket-constants.h  socket.h  socket_type.h  sysmacros.h  timerfd.h
toolchain/patches/newlib/lyos/include/: byteswap.h  dlfcn.h  elf.h  endian.h  err.h  ftw.h  grp.h  limits.h  mntent.h  netdb.h  pthread.h  pty.h  resolv.h  sched.h  semaphore.h  stdio.h  stdlib.h  syslog.h  termios.h  time.h  ucontext.h  values.h
toolchain/patches/newlib/lyos/include/arpa/: inet.h  nameser.h
toolchain/patches/newlib/lyos/include/net/: if.h  if_arp.h  route.h
toolchain/patches/newlib/lyos/include/netinet/: in.h  ip.h
toolchain/patches/newlib/lyos/machine/: Makefile.am  configure.in
toolchain/patches/newlib/lyos/machine/aarch64/: Makefile.am  __sigreturn.S  __ucontext.S  clone.c  configure.in  crt0.S  crti.S  crtn.S  gate_intr.S  makecontext.c  tls.c  ucontextoffsets.h
toolchain/patches/newlib/lyos/machine/aarch64/include/: mcontext.h  tls.h
toolchain/patches/newlib/lyos/machine/arm/: Makefile.am  __clzsi2.c  __divsi3.c  __modsi3.c  __sigreturn.S  __udivsi3.c  __umodsi3.c  clone.c  configure.in  crt0.S  crti.S  crtn.S  double.h  gate_intr.S  longlong.h  sfp-machine.h
toolchain/patches/newlib/lyos/machine/i386/: Makefile.am  __clone.S  __sigreturn.S  __ucontext.S  clone.c  configure.in  crt0.S  gate_intr.S  getpagesize.c  makecontext.c  set_thread_area.c  tls.c  ucontextoffsets.h
toolchain/patches/newlib/lyos/machine/i386/include/: tls.h
toolchain/patches/newlib/lyos/machine/riscv/: Makefile.am  __sigreturn.S  __ucontext.S  _init.S  asm.h  crt0.S  crti.S  crtn.S  gate_intr.S  makecontext.c  tls.c  ucontextoffsets.h
toolchain/patches/newlib/lyos/machine/riscv/include/: mcontext.h  tls.h
toolchain/patches/newlib/lyos/machine/x86_64/: Makefile.am  __clone.S  __ucontext.S  arch_prctl.c  clone.c  configure.in  crt0.S  crti.S  crtn.S  gate_intr.S  makecontext.c  tls.c  ucontextoffsets.h
toolchain/patches/newlib/lyos/machine/x86_64/include/: mcontext.h  tls.h
toolchain/patches/newlib/lyos/posix/: Makefile.am  posix_spawn.c
toolchain/patches/newlib/lyos/pthread/: Makefile.am  pthread.c  pthread_attr.c  pthread_barrier.c  pthread_cleanup.c  pthread_cond.c  pthread_create.c  pthread_internal.h  pthread_once.c  pthread_rwlock.c
toolchain/patches/newlib/lyos/sys/: _pthreadtypes.h  dirent.h  epoll.h  errno.h  eventfd.h  fcntl.h  features.h  futex.h  inotify.h  ioctl.h  ipc.h  mman.h  mount.h  poll.h  prctl.h  ptrace.h  random.h  resource.h  sched.h  sendfile.h  shm.h  signal.h  signalfd.h  socket.h  stat.h  statfs.h  statvfs.h  syslog.h  sysmacros.h  termios.h  timerfd.h  tls.h  types.h  ucontext.h  uio.h  un.h  unistd.h  utime.h  utsname.h  vfs.h  (+1 more)
trunk/: a.img  bochsrc  krnl.map
userspace/: Makefile
utils/: Makefile
(+1568 files in other folders)
