AC_PREREQ(2.59)
AC_INIT([newlib], [NEWLIB_VERSION])
AC_CONFIG_SRCDIR([syscalls.c])

AC_CONFIG_AUX_DIR(../../../..)
NEWLIB_CONFIGURE(../../..)

_LT_DECL_SED
_LT_PROG_ECHO_BACKSLASH
AC_PROG_AWK
if test "${use_libtool}" = "yes"; then
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
fi

AC_CONFIG_SUBDIRS(machine)

if test -n "${machine_dir}"; then
  if test "${use_libtool}" = "yes"; then
    LYOS_MACHINE_LIB=machine/${machine_dir}/liblyos${machine_dir}.${aext}
  else
    LYOS_MACHINE_LIB=machine/lib.${aext}
  fi
fi
AC_SUBST(LYOS_MACHINE_LIB)
AC_SUBST(machine_dir)

EXTRA_SUBDIRS=pthread

if test "${use_libtool}" = "yes"; then
  EXTRA_SUBLIB=pthread/libpthread.${aext}
else
  EXTRA_SUBLIBS=pthread/lib.${aext}
fi

AC_SUBST(EXTRA_SUBDIRS)
AC_SUBST(EXTRA_SUBLIBS)

AC_CONFIG_FILES([Makefile pthread/Makefile])
AC_OUTPUT
