AC_PREREQ(2.59)
AC_INIT([newlib], [NEWLIB_VERSION])
AC_CONFIG_SRCDIR([crt0.S])
AC_CONFIG_SRCDIR([crti.S])
AC_CONFIG_SRCDIR([crtn.S])

AC_CONFIG_AUX_DIR(../../../../../..)
NEWLIB_CONFIGURE(../../../../..)

_LT_DECL_SED
_LT_PROG_ECHO_BACKSLASH
AC_PROG_AWK
if test "${use_libtool}" = "yes"; then
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
